@@ -164,3 +164,4 @@ T_315ui_locale_uk_UA:23026ac2ed9767541e89f2261bcf8b60-3182bfa8c7ef57b56185285fbd
 T_316ui_locale_zh_CN:23026ac2ed9767541e89f2261bcf8b60-399cd00f7f8a16f553c448c97b560a70:passed:20111016-192532:0.719437777
 T_317ui_locale_zh_TW:af26160704aa699ca03270813855ec7d-836878bf8118c2b708d4fcadd88245dc:passed:20111016-192531:0.705209719
 T_318ui_locale_invalid:ok:passed:20111016-192531:0.044292216
+T_319wav_with_pcm_detected_as_dts:eb7f2acc6f008c40d13f068e911ce9c0:passed:20111016-224416:0.071996925
